--- a/package.json
+++ b/package.json
@@ -4,12 +4,24 @@
   "main": "index.js",
   "author": "mengdaoshizhongxinyang",
   "license": "MIT",
+  "scripts": {
+    "test": "jest"
+  },
   "devDependencies": {
+    "@types/jest": "^27.4.0",
     "@types/lodash": "^4.14.178",
+    "@types/qs": "^6.9.7",
     "jest": "^27.5.1",
+    "ts-jest": "^28.0.2",
+    "ts-node": "^10.7.0",
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "@types/sqlite3": "^3.1.8",
+    "better-sqlite3": "^7.5.1",
+    "lodash": "^4.17.21",
+    "node-gyp": "^9.0.0",
+    "qs": "^6.11.0",
+    "sqlite3": "^5.0.2"
   }
 }
